--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
