--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose-lean-virtuals": "^0.4.0",
     "rootpath": "^0.1.2"
   },
   "devDependencies": {
