--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "iview": "^3.3.3",
     "rxjs": "^6.4.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.2",
     "vuelidate": "^0.7.4",
