--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose-lean-virtuals": "^0.4.0",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
