--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "iview": "^3.3.3",
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.5.5",
     "rxjs": "^6.4.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
