--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.5.5",
     "mongoose-lean-virtuals": "^0.4.0",
     "rootpath": "^0.1.2",
     "socket.io": "^2.2.0"
