--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,15 @@
     "start": "webpack-dev-server --open"
   },
   "dependencies": {
-    "iview": "^3.3.3",
-    "mongodb": "^3.2.3",
-    "mongoose": "^5.5.5",
-    "rxjs": "^6.4.0",
+    "iview": "^3.4.1",
+    "mongodb": "^3.2.4",
+    "mongoose": "^5.5.7",
+    "rxjs": "^6.5.2",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.2",
+    "vue-router": "^3.0.6",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -23,13 +23,16 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-vue": "^2.0.2",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "iview-loader": "^1.2.2",
     "path": "^0.12.7",
+    "url-loader": "^1.1.2",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   }
 }
