--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "webpackbar": "^3.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
